Update API for sending file + update API spec
